# dfc_llama

./: .metadata  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dfc_llama.dart  dfc_llama_bindings_generated.dart
lib/src/: chat.dart  completion_event.dart  context_params.dart  isolate_child.dart  isolate_parent.dart  isolate_scope.dart  isolate_types.dart  llama.dart  llama_cpp.dart  llama_input.dart  model_params.dart  prompt_format.dart  sequence_filter.dart  text_chunker.dart
lib/src/additions/: library_paths.dart  llama_extension.dart
lib/src/params/: context_params.dart  model_params.dart  sampler_params.dart
linux/: CMakeLists.txt
linux_build/: CMakeLists.txt
macos/: dfc_llama.podspec
macos/Classes/: dfc_llama.c
src/: CMakeLists.txt  dfc_llama.c  update_llama.sh
src/llama.cpp/: build-xcframework.sh
tools/: build_mac_framework.sh  linux_build.sh  update_llama.sh  windows_build.sh
windows/: CMakeLists.txt
windows_build/: CMakeLists.txt
